infrastructure/portfolio-staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-staging
  labels:
    app.kubernetes.io/part-of: portfolio
    environment: staging
