infrastructure/portfolio-staging/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: portfolio-staging-default-policy
  namespace: portfolio-staging
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: portfolio
      app.kubernetes.io/instance: portfolio-staging
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cloudflare-tunnel
            k8s:app.kubernetes.io/name: cloudflared
      toPorts:
        - ports:
            - port: "4321"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "4321"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
